--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,18 @@
     {
       "src": "index.html",
       "use": "@vercel/static"
+    },
+    {
+      "src": "style.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "script.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "wechat-qr.png",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
