--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "style.css",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "script.js",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "wechat-qr.png",
+      "src": "/*",
       "use": "@vercel/static"
     }
   ],
