--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,13 @@
   ],
   "routes": [
     {
+      "src": "/(.*\\.(png|jpg|jpeg|gif|ico|svg))",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000",
+        "Content-Type": "image/$1"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html",
       "headers": {
