--- a/vercel.json
+++ b/vercel.json
@@ -7,14 +7,22 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*\\.(png|jpg|jpeg|gif|svg))",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000",
-        "Content-Type": "image/$1",
-        "X-Content-Type-Options": "nosniff"
-      }
-    },
+{
+  "src": "/(.*\\.(png|jpg|jpeg|gif|svg|apk))",
+  "headers": {
+    "Cache-Control": "public, max-age=31536000",
+    "Content-Type": "image/$1",
+    "X-Content-Type-Options": "nosniff"
+  }
+},
+{
+  "src": "/(.*\\.apk)",
+  "headers": {
+    "Cache-Control": "public, max-age=31536000",
+    "Content-Type": "application/vnd.android.package-archive",
+    "X-Content-Type-Options": "nosniff"
+  }
+},
     {
       "src": "/favicon.ico",
       "headers": {
